# bamboo-rest-api

./: .env  Cargo.toml  Procfile  README.md  Rocket.toml  rust-toolchain
migrations/2020-01-05-144657_create_messages_table/: up.sql
migrations/2020-01-05-145443_create_authors_table/: down.sql  up.sql
migrations/2020-01-05-145449_create_keys_table/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: authors.rs  keys.rs  messages.rs  mod.rs
