[package]
name = "bamboo-rest"
version = "0.1.1"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-core = {git = "https://github.com/pietgeursen/bamboo-rs", rev = "388579"}
rocket = "0.4.4"
rocket_okapi = "0.4.1"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
hex = "0.4"
okapi = "0.4.0"
schemars = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
