[package]
name = "bamboo-rest"
version = "0.1.2"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-rs-core = {git = "https://github.com/pietgeursen/bamboo-rs", branch = "master"}
rocket = "0.4.6"
rocket_okapi = "0.5.1"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
hex = "0.4"
okapi = { version = "0.4", features = ["derive_json_schema"] }
schemars = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
