[package]
name = "bamboo-rest"
version = "0.1.2"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-rs-core = {git = "https://github.com/pietgeursen/bamboo-rs", branch = "master"}
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_okapi = {version = "0.8.0-rc.1", features = ["swagger"]}
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
hex = "0.4"
schemars = "0.7.0"
serde = { version = "1.0", features = ["derive"] }

